# tally_migrator

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: SPEC_validation_engine.md  tally-migrator-documentation.md
tally_migrator/: api.py  hooks.py  install.py  modules.txt  naming.py  patches.txt
tally_migrator/config/: desktop.py
tally_migrator/erpnext/: importers.py  uom_resolver.py
tally_migrator/erpnext/importers/: __init__.py  accounts.py  banks.py  base.py  bom.py  (+9 more)
tally_migrator/migration/: account_mapping.py  coverage.py  master_migrator.py  overrides.py  profiler.py  readiness.py  reconciliation.py  revert_monitor.py  rollback.py
tally_migrator/tally/: client.py  config.py  extractors.py  file_source.py  mappings.py  resolver.py
tally_migrator/tests/: bootstrap.py  conftest.py  run_pure.py  test_account_mapping.py  test_async_decision.py  test_bank_commit_batching.py  test_bom.py  test_coa.py  test_coverage.py  test_critical_fixes.py  test_extractor.py  test_file_lookup.py  test_file_source.py  test_finalize_terminal_status.py  test_forex_openings.py  test_get_companies.py  test_importer.py  test_item_tax_template.py  test_mappings.py  test_naming.py  test_overrides.py  test_party_address_naming.py  test_prices.py  test_raw_file_bytes.py  test_reconciliation.py  test_rollback.py  test_streaming_parse.py  test_summary.py  test_uom_resolver.py  test_uqc.py  test_validation.py  test_zip_and_drive.py  utils.py
tally_migrator/validation/: engine.py
(+16 files in other folders)
